--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -1,4 +1,15 @@
 {
+  "logChannelSet": "लॉग चैनल <#{channel}> पर सेट किया गया।",
+  "noChannelSelected": "आपने कोई वैध चैनल नहीं चुना है।",
+  "next": "➡️ अगला",
+  "previous": "⬅️ पिछला",
+  "selectedCommand": "एक कमांड चुनें",
+  "enabled": "🟢 सक्रिय",
+  "disabled": "🔴 निष्क्रिय",
+  "totalPages": "पृष्ठ **{page}** कुल **{totalPages}** में से",
+  "availableCommands": "📜 उपलब्ध कमांड्स",
+  "noDescription": "कोई विवरण प्रदान नहीं किया गया।",
+  "commandDisabled": "कमांड ``{command}`` इस सर्वर पर वर्तमान में निष्क्रिय है।",
   "serverName": "सर्वर का नाम",
   "serverMembers": "सर्वर सदस्य",
   "economyType": "अर्थव्यवस्था प्रकार",
@@ -300,6 +311,10 @@
     "serverinfo": {
       "name": "serverinfo",
       "description": "📊 सर्वर और CasinoBot के बारे में जानकारी प्राप्त करें"
+    },
+    "setcommand": {
+      "name": "setcommand",
+      "description": "⚙️ सर्वर पर कमांड जोड़ें/हटाएं"
     }
   },
   "categories": {
