--- a/bot/languages/fr.json
+++ b/bot/languages/fr.json
@@ -1,4 +1,15 @@
 {
+  "logChannelSet": "Canal de journal défini sur <#{channel}>.",
+  "noChannelSelected": "Vous n'avez sélectionné aucun canal valide.",
+  "next": "➡️ Suivant",
+  "previous": "⬅️ Précédent",
+  "selectedCommand": "Sélectionner une commande",
+  "enabled": "🟢 Activé",
+  "disabled": "🔴 Désactivé",
+  "totalPages": "Page **{page}** sur **{totalPages}**",
+  "availableCommands": "📜 Commandes disponibles",
+  "noDescription": "Aucune description fournie.",
+  "commandDisabled": "La commande ``{command}`` est actuellement désactivée sur ce serveur.",
   "serverName": "Nom du serveur",
   "serverMembers": "Membres du serveur",
   "economyType": "Type d'économie",
@@ -300,6 +311,10 @@
     "serverinfo": {
       "name": "serverinfo",
       "description": "📊 Obtenez des informations sur le serveur et CasinoBot"
+    },
+    "setcommand": {
+      "name": "setcommand",
+      "description": "⚙️ Ajouter/Retirer une commande sur le serveur"
     }
   },
   "categories": {
