--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -1,4 +1,15 @@
 {
+  "logChannelSet": "Канал журнала установлен на <#{channel}>.",
+  "noChannelSelected": "Вы не выбрали действительный канал.",
+  "next": "➡️ Далее",
+  "previous": "⬅️ Назад",
+  "selectedCommand": "Выберите команду",
+  "enabled": "🟢 Включено",
+  "disabled": "🔴 Отключено",
+  "totalPages": "Страница **{page}** из **{totalPages}**",
+  "availableCommands": "📜 Доступные команды",
+  "noDescription": "Описание не предоставлено.",
+  "commandDisabled": "Команда ``{command}`` в настоящее время отключена на этом сервере.",
   "serverName": "Название сервера",
   "serverMembers": "Участники сервера",
   "economyType": "Тип экономики",
@@ -300,6 +311,10 @@
     "serverinfo": {
       "name": "serverinfo",
       "description": "📊 Получите информацию о сервере и CasinoBot"
+    },
+    "setcommand": {
+      "name": "setcommand",
+      "description": "⚙️ Добавить/Удалить команду на сервере"
     }
   },
   "categories": {
