--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -1,4 +1,6 @@
 {
+  "disabledCommands": "Απενεργοποιημένες εντολές",
+  "noDisabledCommands": "Δεν υπάρχουν απενεργοποιημένες εντολές",
   "logChannelSet": "Ο κανάλι καταγραφής ρυθμίστηκε σε <#{channel}>.",
   "noChannelSelected": "Δεν επιλέξατε κανένα έγκυρο κανάλι.",
   "next": "➡️ Επόμενο",
