--- a/bot/languages/zh.json
+++ b/bot/languages/zh.json
@@ -1,4 +1,6 @@
 {
+  "disabledCommands": "禁用的命令",
+  "noDisabledCommands": "没有禁用的命令",
   "logChannelSet": "日志频道已设置为 <#{channel}>。",
   "noChannelSelected": "您没有选择任何有效的频道。",
   "next": "➡️ 下一页",
