Casi finalizado las compras

--- a/bot/languages/ar.json
+++ b/bot/languages/ar.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "أضف {multiplier} إلى مضاعف أرباحك.",
+  "buyCoins": "احصل على {coins} عملات فوراً.",
+  "buyLevel": "ارتقِ بمستواك {level} فوراً.",
+  "buyVip": "اشترِ VIP للحصول على خصومات لمدة 30 يومًا.",
+  "shopListTitle": "**قائمة الأسعار والمكافآت:**\n",
+  "purchaseInit": "عملية شراء معلقة",
+  "purchaseInitContent": "لقد اخترت شراء {item}\n\nاضغط [هنا]({url}) لإكمال عملية الدفع بمبلغ {price} €. لديك 15 دقيقة لإكمال الشراء.",
+  "buyTimeExceptionContent": "تم إلغاء عملية الشراء لأنه قد مر أكثر من 10 دقائق.",
+  "purchaseSuccess": "🛒 تمت العملية بنجاح",
+  "purchaseSuccessContent": "لقد اشتريت ``{quantity} x {item}`` بمبلغ {price} € بنجاح!",
+  "purchaseError": "حدثت مشكلة أثناء إنشاء طلبك عبر PayPal. الرجاء المحاولة مرة أخرى لاحقًا.",
   "disabledCommands": "الأوامر المعطلة",
   "noDisabledCommands": "لا توجد أوامر معطلة",
   "logChannelSet": "تم تعيين قناة السجل إلى <#{channel}>.",
