--- a/bot/languages/de.json
+++ b/bot/languages/de.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Füge {multiplier} zu deinem Gewinnmultiplikator hinzu.",
+  "buyCoins": "Erhalte {coins} Münzen sofort.",
+  "buyLevel": "Steige sofort um {level} Level auf.",
+  "buyVip": "Kaufe VIP für 30 Tage Rabatte.",
+  "shopListTitle": "**Preise und Belohnungen:**\n",
+  "purchaseInit": "Ausstehender Kauf",
+  "purchaseInitContent": "Du hast {item} ausgewählt\n\nKlicke [hier]({url}), um deine Zahlung von {price} € abzuschließen. Du hast 15 Minuten, um den Kauf abzuschließen.",
+  "buyTimeExceptionContent": "Der Kauf wurde storniert, da bereits 10 Minuten vergangen sind.",
+  "purchaseSuccess": "🛒 Kauf Abgeschlossen",
+  "purchaseSuccessContent": "Dein Kauf von ``{quantity} x {item}`` für {price} € wurde erfolgreich abgeschlossen!",
+  "purchaseError": "Es gab ein Problem beim Erstellen deiner PayPal-Bestellung. Bitte versuche es später noch einmal.",
   "disabledCommands": "Deaktivierte Befehle",
   "noDisabledCommands": "Es gibt keine deaktivierten Befehle",
   "logChannelSet": "Log-Kanal auf <#{channel}> gesetzt.",
