--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Πρόσθεσε {multiplier} στον πολλαπλασιαστή κερδών σου.",
+  "buyCoins": "Απόκτησε {coins} νομίσματα άμεσα.",
+  "buyLevel": "Αναβάθμισε άμεσα το επίπεδό σου κατά {level}.",
+  "buyVip": "Αγόρασε VIP για εκπτώσεις για 30 ημέρες.",
+  "shopListTitle": "**Λίστα τιμών και ανταμοιβών:**\n",
+  "purchaseInit": "Εκκρεμής αγορά",
+  "purchaseInitContent": "Έχετε επιλέξει να αγοράσετε {item}\n\nΚάντε κλικ [εδώ]({url}) για να ολοκληρώσετε την πληρωμή σας των {price} €. Έχετε 15 λεπτά για να ολοκληρώσετε την αγορά.",
+  "buyTimeExceptionContent": "Η αγορά ακυρώθηκε καθώς πέρασαν ήδη 10 λεπτά.",
+  "purchaseSuccess": "🛒 Αγορά Ολοκληρώθηκε",
+  "purchaseSuccessContent": "Η αγορά σας για ``{quantity} x {item}`` αξίας {price} € ολοκληρώθηκε με επιτυχία!",
+  "purchaseError": "Παρουσιάστηκε πρόβλημα κατά τη δημιουργία της παραγγελίας PayPal. Παρακαλώ προσπαθήστε ξανά αργότερα.",
   "disabledCommands": "Απενεργοποιημένες εντολές",
   "noDisabledCommands": "Δεν υπάρχουν απενεργοποιημένες εντολές",
   "logChannelSet": "Ο κανάλι καταγραφής ρυθμίστηκε σε <#{channel}>.",
