--- a/bot/languages/en.json
+++ b/bot/languages/en.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Add {multiplier} to your earnings multiplier.",
+  "buyCoins": "Get {coins} coins instantly.",
+  "buyLevel": "Level up {level} instantly.",
+  "buyVip": "Buy VIP for 30 days of discounts.",
+  "shopListTitle": "**Price and Reward List:**\n",
+  "purchaseInit": "Pending Purchase",
+  "purchaseInitContent": "You have selected to buy {item}\n\nClick [here]({url}) to complete your payment of {price} €. You have 15 minutes to complete the purchase.",
+  "buyTimeExceptionContent": "The purchase was cancelled because 10 minutes have passed.",
+  "purchaseSuccess": "🛒 Purchase Completed",
+  "purchaseSuccessContent": "Your purchase of ``{quantity} x {item}`` for {price} € has been successfully completed!",
+  "purchaseError": "There was an issue creating your PayPal order. Please try again later.",
   "disabledCommands": "Disabled Commands",
   "noDisabledCommands": "There are no disabled commands",
   "logChannelSet": "Log channel set to <#{channel}>.",
