--- a/bot/languages/es.json
+++ b/bot/languages/es.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Añade {multiplier} a tu multiplicador de ganancias.",
+  "buyCoins": "Obtén {coins} monedas instantáneamente.",
+  "buyLevel": "Sube {level} niveles instantáneamente.",
+  "buyVip": "Comprar VIP para obtener descuentos por 30 días.",
+  "shopListTitle": "**Lista de Precios y Recompensas:**\n",
+  "purchaseInit": "Compra Pendiente",
+  "purchaseInitContent": "Has seleccionado comprar {item}\n\nHaz clic [aquí]({url}) para completar tu pago de {price} €. Tienes 15 minutos para completar la compra.",
+  "buyTimeExceptionContent": "Se ha cancelado la compra porque ya han pasado 10 minutos.",
+  "purchaseSuccess": "🛒 Compra Completada",
+  "purchaseSuccessContent": "¡Has comprado ``{quantity} x {item}`` por {price} € ha sido completada con éxito!",
+  "purchaseError": "Hubo un problema al crear tu orden de PayPal. Por favor, intenta de nuevo más tarde.",
   "disabledCommands": "Comandos deshabilitados",
   "noDisabledCommands": "No hay comandos deshabilitados",
   "logChannelSet": "Canal de registro establecido en <#{channel}>.",
@@ -79,7 +90,7 @@
   "suggestTitle": "📩 ¡Nueva Sugerencia!",
   "suggestContent": "ha enviado la siguiente sugerencia:",
   "suggestSuccess": "✅ ¡Tu sugerencia ha sido enviada exitosamente!",
-  "negativeItem": "El artículo debe ser mayor que 0.",
+  "negativeItem": "El item debe ser mayor que 0.",
   "buyItemTitle": "🛒 Artículos de la Tienda 🛒",
   "invalidItemSelect": "Artículo seleccionado no válido.",
   "errorNotEnoughMoneyToBuyContent": "No tienes suficiente dinero para comprar este artículo.",
