--- a/bot/languages/it.json
+++ b/bot/languages/it.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Aggiungi {multiplier} al tuo moltiplicatore di guadagni.",
+  "buyCoins": "Ottieni {coins} monete istantaneamente.",
+  "buyLevel": "Aumenta di {level} livelli istantaneamente.",
+  "buyVip": "Acquista VIP per ottenere sconti per 30 giorni.",
+  "shopListTitle": "**Lista dei prezzi e delle ricompense:**\n",
+  "purchaseInit": "Acquisto in sospeso",
+  "purchaseInitContent": "Hai selezionato di acquistare {item}\n\nClicca [qui]({url}) per completare il pagamento di {price} €. Hai 15 minuti per completare l'acquisto.",
+  "buyTimeExceptionContent": "L'acquisto è stato annullato perché sono già passati 10 minuti.",
+  "purchaseSuccess": "🛒 Acquisto completato",
+  "purchaseSuccessContent": "L'acquisto di ``{quantity} x {item}`` per {price} € è stato completato con successo!",
+  "purchaseError": "Si è verificato un problema nella creazione dell'ordine PayPal. Riprova più tardi.",
   "disabledCommands": "Comandi disabilitati",
   "noDisabledCommands": "Non ci sono comandi disabilitati",
   "logChannelSet": "Canale di log impostato su <#{channel}>.",
