--- a/bot/languages/pt.json
+++ b/bot/languages/pt.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Adicione {multiplier} ao seu multiplicador de ganhos.",
+  "buyCoins": "Obtenha {coins} moedas instantaneamente.",
+  "buyLevel": "Aumente {level} níveis instantaneamente.",
+  "buyVip": "Compre VIP para obter descontos por 30 dias.",
+  "shopListTitle": "**Lista de Preços e Recompensas:**\n",
+  "purchaseInit": "Compra Pendente",
+  "purchaseInitContent": "Você selecionou comprar {item}\n\nClique [aqui]({url}) para completar o pagamento de {price} €. Você tem 15 minutos para concluir a compra.",
+  "buyTimeExceptionContent": "A compra foi cancelada porque já se passaram 10 minutos.",
+  "purchaseSuccess": "🛒 Compra Concluída",
+  "purchaseSuccessContent": "Sua compra de ``{quantity} x {item}`` por {price} € foi concluída com sucesso!",
+  "purchaseError": "Houve um problema ao criar seu pedido no PayPal. Por favor, tente novamente mais tarde.",
   "disabledCommands": "Comandos desabilitados",
   "noDisabledCommands": "Não há comandos desabilitados",
   "logChannelSet": "Canal de registro definido para <#{channel}>.",
