--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Добавьте {multiplier} к вашему множителю выигрыша.",
+  "buyCoins": "Получите {coins} монет мгновенно.",
+  "buyLevel": "Повышайте уровень на {level} мгновенно.",
+  "buyVip": "Купите VIP для получения скидок на 30 дней.",
+  "shopListTitle": "**Список цен и вознаграждений:**\n",
+  "purchaseInit": "Ожидает покупку",
+  "purchaseInitContent": "Вы выбрали купить {item}\n\nНажмите [здесь]({url}), чтобы завершить оплату в размере {price} €. У вас есть 15 минут, чтобы завершить покупку.",
+  "buyTimeExceptionContent": "Покупка была отменена, так как прошло уже 10 минут.",
+  "purchaseSuccess": "🛒 Покупка завершена",
+  "purchaseSuccessContent": "Ваша покупка ``{quantity} x {item}`` за {price} € была успешно завершена!",
+  "purchaseError": "Произошла ошибка при создании вашего заказа PayPal. Пожалуйста, попробуйте позже.",
   "disabledCommands": "Отключенные команды",
   "noDisabledCommands": "Нет отключенных команд",
   "logChannelSet": "Канал журнала установлен на <#{channel}>.",
