--- a/bot/languages/zh.json
+++ b/bot/languages/zh.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "将 {multiplier} 添加到你的收益倍数。",
+  "buyCoins": "立即获得 {coins} 个硬币。",
+  "buyLevel": "立即提升 {level} 级。",
+  "buyVip": "购买VIP以获得30天的折扣。",
+  "shopListTitle": "**价格和奖励列表：**\n",
+  "purchaseInit": "待处理购买",
+  "purchaseInitContent": "你选择购买 {item}\n\n点击 [这里]({url}) 完成 {price} € 的支付。你有15分钟时间完成购买。",
+  "buyTimeExceptionContent": "购买已取消，因为已经过去了10分钟。",
+  "purchaseSuccess": "🛒 购买完成",
+  "purchaseSuccessContent": "你购买的 ``{quantity} x {item}``，价格为 {price} €，已成功完成！",
+  "purchaseError": "创建你的PayPal订单时出现问题。请稍后再试。",
   "disabledCommands": "禁用的命令",
   "noDisabledCommands": "没有禁用的命令",
   "logChannelSet": "日志频道已设置为 <#{channel}>。",
