--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "अपने लाभ गुणक में {multiplier} जोड़ें।",
+  "buyCoins": "तुरंत {coins} सिक्के प्राप्त करें।",
+  "buyLevel": "तुरंत {level} स्तर बढ़ाएं।",
+  "buyVip": "30 दिनों के लिए छूट प्राप्त करने के लिए VIP खरीदें।",
+  "shopListTitle": "**मूल्य और पुरस्कार सूची:**\n",
+  "purchaseInit": "खरीदारी लंबित",
+  "purchaseInitContent": "आपने {item} खरीदने का चयन किया है\n\nअपने भुगतान को {price} € पूरा करने के लिए [यहां]({url}) क्लिक करें। आपके पास खरीदारी को पूरा करने के लिए 15 मिनट हैं।",
+  "buyTimeExceptionContent": "खरीदारी रद्द कर दी गई है क्योंकि पहले ही 10 मिनट हो चुके हैं।",
+  "purchaseSuccess": "🛒 खरीदारी पूर्ण",
+  "purchaseSuccessContent": "आपकी ``{quantity} x {item}`` की खरीदारी {price} € के लिए सफलतापूर्वक पूरी हो गई है!",
+  "purchaseError": "आपका PayPal आदेश बनाने में समस्या आई है। कृपया बाद में पुनः प्रयास करें।",
   "disabledCommands": "अक्षम आदेश",
   "noDisabledCommands": "कोई निष्क्रिय आदेश नहीं हैं",
   "logChannelSet": "लॉग चैनल <#{channel}> पर सेट किया गया।",
