--- a/bot/languages/pl.json
+++ b/bot/languages/pl.json
@@ -1,4 +1,15 @@
 {
+  "buyMultiplier": "Dodaj {multiplier} do swojego mnożnika zysków.",
+  "buyCoins": "Natychmiast otrzymasz {coins} monet.",
+  "buyLevel": "Natychmiast zwiększ swój poziom o {level}.",
+  "buyVip": "Kup VIP, aby uzyskać zniżki przez 30 dni.",
+  "shopListTitle": "**Lista cen i nagród:**\n",
+  "purchaseInit": "Zakup w toku",
+  "purchaseInitContent": "Wybrałeś zakup {item}\n\nKliknij [tutaj]({url}), aby zakończyć płatność w wysokości {price} €. Masz 15 minut na zakończenie zakupu.",
+  "buyTimeExceptionContent": "Zakup został anulowany, ponieważ minęło już 10 minut.",
+  "purchaseSuccess": "🛒 Zakup zakończony",
+  "purchaseSuccessContent": "Zakup ``{quantity} x {item}`` za {price} € został pomyślnie zakończony!",
+  "purchaseError": "Wystąpił problem podczas tworzenia twojego zamówienia PayPal. Spróbuj ponownie później.",
   "disabledCommands": "Wyłączone komendy",
   "noDisabledCommands": "Brak wyłączonych komend",
   "logChannelSet": "Kanał dziennika ustawiony na <#{channel}>.",
