--- a/bot/languages/ar.json
+++ b/bot/languages/ar.json
@@ -1,4 +1,5 @@
 {
+  "onlyBotGlobal": "يمكنك تنفيذ هذا الأمر فقط عندما تكون الاقتصاد في الوضع العالمي.",
   "buyMultiplier": "أضف {multiplier} إلى مضاعف أرباحك.",
   "buyCoins": "احصل على {coins} عملات فوراً.",
   "buyLevel": "ارتقِ بمستواك {level} فوراً.",
