--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -1,4 +1,5 @@
 {
+  "onlyBotGlobal": "Μπορείτε να εκτελέσετε αυτή την εντολή μόνο όταν η οικονομία είναι σε παγκόσμια λειτουργία.",
   "buyMultiplier": "Πρόσθεσε {multiplier} στον πολλαπλασιαστή κερδών σου.",
   "buyCoins": "Απόκτησε {coins} νομίσματα άμεσα.",
   "buyLevel": "Αναβάθμισε άμεσα το επίπεδό σου κατά {level}.",
