--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -1,4 +1,5 @@
 {
+  "onlyBotGlobal": "आप केवल वैश्विक मोड में अर्थव्यवस्था के साथ ही इस आदेश को निष्पादित कर सकते हैं।",
   "buyMultiplier": "अपने लाभ गुणक में {multiplier} जोड़ें।",
   "buyCoins": "तुरंत {coins} सिक्के प्राप्त करें।",
   "buyLevel": "तुरंत {level} स्तर बढ़ाएं।",
