--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -1,4 +1,5 @@
 {
+  "onlyBotGlobal": "Вы можете выполнить эту команду только в глобальном режиме экономики.",
   "buyMultiplier": "Добавьте {multiplier} к вашему множителю выигрыша.",
   "buyCoins": "Получите {coins} монет мгновенно.",
   "buyLevel": "Повышайте уровень на {level} мгновенно.",
