--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -329,6 +329,10 @@
     "setcommand": {
       "name": "setcommand",
       "description": "⚙️ Προσθήκη/Αφαίρεση εντολής στον διακομιστή"
+    },
+    "shop": {
+      "name": "shop",
+      "description": "<:paypal:1328783868781658203> Αγοράστε αναβαθμίσεις για να είστε οι καλύτεροι!"
     }
   },
   "categories": {
