--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -329,6 +329,10 @@
     "setcommand": {
       "name": "setcommand",
       "description": "⚙️ Добавить/Удалить команду на сервере"
+    },
+    "shop": {
+      "name": "shop",
+      "description": "<:paypal:1328783868781658203> Покупайте улучшения, чтобы стать лучшим!"
     }
   },
   "categories": {
